Updated Icelandic translation

--- a/po/is.po
+++ b/po/is.po
@@ -1,35 +1,18 @@
-# #-#-#-#-#  is.po (Nautilus)  #-#-#-#-#
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR Samúel Jón Gunnarsson <sammi@techattack.nu>, 2003.
-#
-# #-#-#-#-#  is.po (eel)  #-#-#-#-#
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Icelandic Translation of Nautilus.
+# This file is distributed under the same license as the Nautilus package.
+# The translations are Copyright (C) of the contributing translators.  
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # Samúel Jón Gunnarsson <sammi@techattack.nu>, 2003.
-#, fuzzy
+# Anna Jonna Ármannsdóttir <annajonna@gmail.com> 2009. 
+#
 msgid ""
 msgstr ""
-"#-#-#-#-#  is.po (Nautilus)  #-#-#-#-#\n"
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-10 12:02+0100\n"
-"PO-Revision-Date: 2004-03-13 06:35-0000\n"
-"Last-Translator: helgi <helgi@trance.is>\n"
-"Language-Team: Icelandic <gnome@techattack.nu>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  is.po (eel)  #-#-#-#-#\n"
-"Project-Id-Version: eel\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-02-27 18:27+0100\n"
-"PO-Revision-Date: 2004-03-13 06:27-0000\n"
-"Last-Translator: helgi <helgi@trance.is>\n"
-"Language-Team: Icelandic <gnome@techattack.nu>\n"
+"PO-Revision-Date: 2009-10-02 10:48+0000\n"
+"Last-Translator: Anna Jonna Ármannsdóttir <annajonna@gmail.com>\n"
+"Language-Team: Icelandic <rglug@rglug.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -570,11 +553,7 @@ msgid ""
 "are: \"size\", \"type\", \"date_modified\", \"date_changed\", \"date_accessed"
 "\", \"owner\", \"group\", \"permissions\", \"octal_permissions\" and "
 "\"mime_type\"."
-msgstr ""
-"Listi yfir texta fyrir neðan táknmyndir í táknmyndasýn og skjáborði. Fjöldi "
-"upplýsinga veltur á súmm gildi. Hugsanleg gildi eru: \"stærð\",\"gerð\", "
-"\"dags_breytt\", \"dags_opnað\", \"eigandi\", \"hópur\", \"réttindi\", "
-"\"tölu_réttindi\" og \"mime_gerð\""
+msgstr "Listi yfir texta fyrir neðan táknmyndir í táknmyndasýn og skjáborði. Fjöldi upplýsinga veltur á súmm gildi. Hugsanleg gildi eru: \"size\", \"type\", \"date_modified\", \"date_changed\", \"date_accessed\", \"owner\", \"group\", \"permissions\", \"octal_permissions\" and \" \"mime_type\"."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:2
 msgid "Bring up a new window for every opened file"
@@ -948,9 +927,7 @@ msgstr "Sýna einungis möppur í síðustiku undir trésýn"
 msgid ""
 "Possible values are \"single\" to launch files on a single click, or \"double"
 "\" to launch them on a double click."
-msgstr ""
-"Möguleg gildi eru \"einfalt\" til að ræsa skrár með einföldu klikki, eða "
-"\"tvöfalt\" til að ræsa með tvíklikki."
+msgstr "Möguleg gildi eru \"single\" til að ræsa skrár með einum smelli, eða \"double\" til að ræsa með tvísmelli."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:67
 msgid "Put labels beside icons"
@@ -966,7 +943,6 @@ msgid "Sans 10"
 msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
-#, fuzzy
 msgid "Show folders first in windows"
 msgstr "Sýna fyrst möppur í gluggum"
 
@@ -975,9 +951,8 @@ msgid "Show location bar in new windows"
 msgstr "Sýna staðsetningarrönd í nýjum gluggum"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:73
-#, fuzzy
 msgid "Show mounted volumes on the desktop"
-msgstr "Heim táknmynd sýnileg á skjáborði"
+msgstr "Tengd drif sýnileg á skjáborði"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:74
 msgid "Show side pane in new windows"
