Updated breton translation

--- a/po/br.po
+++ b/po/br.po
@@ -6746,7 +6746,7 @@ msgstr "_Kinnig"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:783
 msgid "_Help"
-msgstr "S_koazell"
+msgstr "_Skoazell"
 
 #. name, stock id
 #. label, accelerator
