Updating Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -19,11 +19,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus HEAD\n"
+"Project-Id-Version: nautilus MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-08-10 18:19+0000\n"
-"PO-Revision-Date: 2009-09-05 08:25+0300\n"
+"POT-Creation-Date: 2009-10-06 15:12+0000\n"
+"PO-Revision-Date: 2009-10-09 20:49+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1459,6 +1459,9 @@ msgstr "L_iida"
 msgid "Merge _All"
 msgstr "Liida _kõik"
 
+msgid "Copy _Anyway"
+msgstr "Ko_peeri ikka"
+
 #, c-format
 msgid "%'d second"
 msgid_plural "%'d seconds"
@@ -2511,6 +2514,9 @@ msgstr "Tundmatut tüüpi fail"
 msgid "There is no application installed for %s files"
 msgstr "Failitüübi %s jaoks pole ühtegi rakendust paigaldatud"
 
+msgid "_Select Application"
+msgstr "_Vali rakendus"
+
 msgid "There was an internal error trying to search for applications:"
 msgstr "Rakenduse otsimisel tekkis sisemine viga:"
 
@@ -2632,9 +2638,48 @@ msgstr "_Sirvi..."
 msgid "_Open"
 msgstr "_Ava"
 
-#, c-format
-msgid "Open %s and other files of type \"%s\" with:"
+#. first %s is a filename and second %s is a file extension
+#, fuzzy, c-format
+#| msgid "Open %s and other files of type \"%s\" with:"
+msgid "Open %s and other %s document with:"
 msgstr "Faili %s ja teisi \"%s\"-liigilisi faile tuleb avada rakendusega:"
+
+#. the %s here is a file name
+#. %s is a filename
+#, fuzzy, c-format
+#| msgid "Open With"
+msgid "Open %s with:"
+msgstr "Avamine rakendusega"
+
+#, fuzzy, c-format
+#| msgid "There is no application installed for %s files"
+msgid "_Remember this application for %s documents"
+msgstr "Failitüübi %s jaoks pole ühtegi rakendust paigaldatud"
+
+#. Only in add mode - the %s here is a file extension
+#, fuzzy, c-format
+#| msgid "Open all files of type \"%s\" with:"
+msgid "Open all %s documents with:"
+msgstr "Kõik \"%s\" liigi alla kuuluvad failid avatakse rakendusega:"
+
+#. First %s is a filename, second is a description
+#. * of the type, eg "plain text document"
+#, fuzzy, c-format
+#| msgid "Open %s and other files of type \"%s\" with:"
+msgid "Open %s and other \"%s\" files with:"
+msgstr "Faili %s ja teisi \"%s\"-liigilisi faile tuleb avada rakendusega:"
+
+#. %s is a file type description
+#, fuzzy, c-format
+#| msgid "There is no application installed for %s files"
+msgid "_Remember this application for \"%s\" files"
+msgstr "Failitüübi %s jaoks pole ühtegi rakendust paigaldatud"
+
+#. Only in add mode
+#, fuzzy, c-format
+#| msgid "Open all files of type \"%s\" with:"
+msgid "Open all \"%s\" files with:"
+msgstr "Kõik \"%s\" liigi alla kuuluvad failid avatakse rakendusega:"
 
 msgid "_Add"
 msgstr "L_isa"
@@ -3492,8 +3537,8 @@ msgid_plural "Move the selected items out of the trash"
 msgstr[0] "Valitud kirje prügikastist väljatõstmine"
 msgstr[1] "Valitud kirjete prügikastist väljatõstmine"
 
-msgid "Start the select drive"
-msgstr "Käivitab valitud ketta"
+msgid "Start the selected drive"
+msgstr "Valitud kettaseadme käivitamine"
 
 msgid "Connect to the selected drive"
 msgstr "Ühendab valitud kettale"
@@ -3567,9 +3612,6 @@ msgstr "Avatud kataloogiga seotud mitmekettaseadme seiskamine"
 
 msgid "Lock the drive associated with the open folder"
 msgstr "Avatud kataloogiga seotud kettaseadme lukustamine"
-
-msgid "Start the selected drive"
-msgstr "Valitud kettaseadme käivitamine"
 
 #. add the "open in new window" menu item
 msgid "Open in New _Window"
@@ -4964,8 +5006,26 @@ msgstr "Märkmed"
 msgid "Show Notes"
 msgstr "Näita märkmeid"
 
+msgid "Open the contents of your desktop in a folder"
+msgstr "Töölaua avamine kaustana"
+
+msgid "Open the contents of the File System"
+msgstr "Failisüsteemi sisukorra avamine"
+
 msgid "Network"
 msgstr "Võrk"
+
+msgid "Browse the contents of the network"
+msgstr "Võrgus olevate ressursside sirvimine"
+
+#, c-format
+msgid "Mount and open %s"
+msgstr ""
+
+#, fuzzy
+#| msgid "Open with %s"
+msgid "Open the trash"
+msgstr "Ava programmiga %s"
 
 #. start() for type G_DRIVE_START_STOP_TYPE_SHUTDOWN is normally not used
 msgid "_Power On"
@@ -5594,6 +5654,9 @@ msgstr "Suurendus"
 
 msgid "Set the zoom level of the current view"
 msgstr "Praeguse vaate suurendusastme seadmine"
+
+#~ msgid "Start the select drive"
+#~ msgstr "Käivitab valitud ketta"
 
 #~ msgid "Open with \"%s\""
 #~ msgstr "Ava programmiga \"%s\""
