po/vi.po: update translation of "Places"

--- a/po/vi.po
+++ b/po/vi.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.25.4\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus&component=general\n"
 "POT-Creation-Date: 2009-02-12 23:05+0000\n"
-"PO-Revision-Date: 2009-02-13 21:52+0930\n"
+"PO-Revision-Date: 2009-10-13 20:09+0700\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -5537,11 +5537,11 @@ msgstr "Quét _lại"
 
 #: ../src/nautilus-places-sidebar.c:2382
 msgid "Places"
-msgstr "Nơi"
+msgstr "Mở nhanh"
 
 #: ../src/nautilus-places-sidebar.c:2388
 msgid "Show Places"
-msgstr "Hiện các nơi"
+msgstr "Mở nhanh một số nơi"
 
 #. set the title and standard close accelerator
 #: ../src/nautilus-property-browser.c:251
@@ -5819,7 +5819,7 @@ msgstr "Nautilus"
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:901
 msgid "_Places"
-msgstr "Nơ_i"
+msgstr "_Mở nhanh"
 
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:902
