Another minor update for Crimean Tatar (Crimean Turkish) translation

--- a/po/crh.po
+++ b/po/crh.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-19 19:47-0500\n"
-"PO-Revision-Date: 2009-10-19 22:25-0500\n"
+"PO-Revision-Date: 2009-10-20 00:52-0500\n"
 "Last-Translator: Reşat SABIQ <tilde.birlik@gmail.com>\n"
 "Language-Team: Qırımtatarca (Qırım Türkçesi) <tilde-birlik-tercime@lists."
 "sourceforge.net>\n"
@@ -4889,14 +4889,13 @@ msgstr "Seçili dosyayı bu pencerede aç"
 #: ../src/file-manager/fm-directory-view.c:6955
 #: ../src/file-manager/fm-directory-view.c:7125
 msgid "Open in Navigation Window"
-msgstr "Yürsetim Penceresinde Aç"
+msgstr "Seyrüsefer Penceresinde Aç"
 
 # src/file-manager/nautilus-directory-view-ui.xml.h:19
-# tr
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6956
 msgid "Open each selected item in a navigation window"
-msgstr "Seçili er dosyayı yöneltme penceresinde aç"
+msgstr "Saylanğan er unsurnı bir seyrüsefer penceresinde aç"
 
 # src/file-manager/nautilus-search-list-view-ui.xml.h:2
 #. name, stock id
@@ -5344,11 +5343,10 @@ msgid "Save the current search as a file"
 msgstr "Mevcut aramayı dosya olarak kaydet"
 
 # src/file-manager/nautilus-directory-view-ui.xml.h:19
-# tr
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:7126
 msgid "Open this folder in a navigation window"
-msgstr "Bu klasörü bir seyir penceresinde aç"
+msgstr "Bu cilbentni bir seyrüsefer penceresinde aç"
 
 # src/file-manager/nautilus-directory-view-ui.xml.h:19
 # tr
@@ -7797,7 +7795,7 @@ msgstr "_Episi Pencerelerni Qapat"
 # src/nautilus-shell-ui.xml.h:13
 #: ../src/nautilus-navigation-window-menus.c:803
 msgid "Close all Navigation windows"
-msgstr "Episi Yürsetim pencerelerini qapat"
+msgstr "Episi Seyrüsefer pencerelerini qapat"
 
 # src/nautilus-bookmarks-window.c:177
 #. name, stock id, label
