Update for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.28.1 are:
+* Translation updates
+* Correctly position icons for file drops
+* Fix lingering unmount menu item
+* Update tracker support for version 0.7
+* Fix crashes
+* Set correct recent files info
+* Make changing visible list view columns instant
+* Allow focusing the list view by clicking outside a line
+* Use right gconf key for the disable_tabs setting
+
 Major changes in 2.28.0 are:
 * Translation updates
 * Don't load non-images for thumbnailing when zoomed
