Updated Lithuanian translation.

--- a/po/lt.po
+++ b/po/lt.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: lt\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-10-25 20:11+0200\n"
-"PO-Revision-Date: 2009-10-25 20:11+0300\n"
+"PO-Revision-Date: 2009-10-30 13:16+0200\n"
 "Last-Translator: Gintautas Miliauskas <gintautas@miliauskas.lt>\n"
 "Language-Team: Lithuanian\n"
 "MIME-Version: 1.0\n"
@@ -3594,7 +3594,7 @@ msgstr "Ieškoti „%s“"
 #: ../libnautilus-private/nautilus-undo-signal-handlers.c:174
 #: ../src/nautilus-query-editor.c:983
 msgid "Edit"
-msgstr "Keisti"
+msgstr "Taisa"
 
 #: ../libnautilus-private/nautilus-undo-signal-handlers.c:175
 msgid "Undo Edit"
@@ -7154,7 +7154,7 @@ msgstr "_Failas"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:785
 msgid "_Edit"
-msgstr "_Keisti"
+msgstr "_Taisa"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:786
