Updated Low German translation

--- a/po/nds.po
+++ b/po/nds.po
@@ -1,16 +1,16 @@
 # Low German translation for nautilus.
 # Copyright (C) 2009 nautilus's COPYRIGHT HOLDER
 # This file is distributed under the same license as the nautilus package.
-# Nils-Christoph Fiedler <linux@medienkompanie.de>, 2009.
+# Nils-Christoph Fiedler <fiedler@medienkompanie.de>, 2009.
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-10-20 15:21+0000\n"
-"PO-Revision-Date: 2009-10-22 18:32+0100\n"
-"Last-Translator: Nils-Christoph Fiedler <linux@medienkompanie.de>\n"
+"POT-Creation-Date: 2009-11-17 09:34+0000\n"
+"PO-Revision-Date: 2009-11-22 18:58+0100\n"
+"Last-Translator: Nils-Christoph Fiedler <fiedler@medienkompanie.de>\n"
 "Language-Team: Low German <nds-lowgerman@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1348,7 +1348,7 @@ msgstr ""
 #: ../src/file-manager/fm-tree-view.c:1325
 #: ../src/nautilus-places-sidebar.c:2218
 msgid "_Eject"
-msgstr "_Utsmieten"
+msgstr "_Rutsmieten"
 
 #. name, stock id
 #. label, accelerator
@@ -1409,7 +1409,7 @@ msgstr "St_andard bruken"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:43
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:273
-#: ../src/file-manager/fm-list-view.c:1458
+#: ../src/file-manager/fm-list-view.c:1459
 msgid "Name"
 msgstr "Naam"
 
@@ -1863,8 +1863,8 @@ msgstr[1] "Are you sure you want to permanently delete the %'d selected items?"
 #, c-format
 msgid "%'d file left to delete"
 msgid_plural "%'d files left to delete"
-msgstr[0] "%'d file left to delete"
-msgstr[1] "%'d files left to delete"
+msgstr[0] "%'d Datei över to'm Löschen"
+msgstr[1] "%'d Dateien över to'm Löschen"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1417
 msgid "Deleting files"
@@ -1876,8 +1876,8 @@ msgstr "Lösche Dateien"
 #: ../libnautilus-private/nautilus-file-operations.c:1431
 msgid "%T left"
 msgid_plural "%T left"
-msgstr[0] "%T left"
-msgstr[1] "%T left"
+msgstr[0] "%T över"
+msgstr[1] "%T över"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1498
 #: ../libnautilus-private/nautilus-file-operations.c:1532
@@ -1933,8 +1933,8 @@ msgstr "Dateien in'n Papierkörv verschuven"
 #, c-format
 msgid "%'d file left to trash"
 msgid_plural "%'d files left to trash"
-msgstr[0] "%'d file left to trash"
-msgstr[1] "%'d files left to trash"
+msgstr[0] "%'d Datei över im Papierkörv"
+msgstr[1] "%'d Dateien över im Papierkörv"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1781
 msgid "Cannot move file to trash, do you want to delete immediately?"
@@ -2146,8 +2146,8 @@ msgstr "%S of %S"
 #| msgid_plural "%S of %S &#8212; %T left (%S/sec)"
 msgid "%S of %S — %T left (%S/sec)"
 msgid_plural "%S of %S — %T left (%S/sec)"
-msgstr[0] "%S of %S &#8212; %T left (%S/sec)"
-msgstr[1] "%S of %S &#8212; %T left (%S/sec)"
+msgstr[0] "%S vun %S &#8212; %T över (%S/Sek)"
+msgstr[1] "%S vun %S &#8212; %T över (%S/Sek)"
 
 #: ../libnautilus-private/nautilus-file-operations.c:3299
 msgid ""
@@ -2804,8 +2804,8 @@ msgstr "Kompakte Ansicht"
 #. translators: this is used in the view selection dropdown
 #. * of navigation windows and in the preferences dialog
 #: ../libnautilus-private/nautilus-global-preferences.c:144
-#: ../src/file-manager/fm-list-view.c:1512
-#: ../src/file-manager/fm-list-view.c:2924
+#: ../src/file-manager/fm-list-view.c:1513
+#: ../src/file-manager/fm-list-view.c:2925
 #: ../src/nautilus-file-management-properties.ui.h:68
 msgid "List View"
 msgstr "Listansicht"
@@ -2952,7 +2952,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-mime-actions.c:785
 msgid "Run in _Terminal"
-msgstr "Im _terminal lööpen laten"
+msgstr "Im _Terminal lööpen laten"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:786
 msgid "_Display"
@@ -3420,7 +3420,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:1165
 msgid "Select Items Matching"
-msgstr ""
+msgstr "Elemente utwählen, de passen"
 
 #: ../src/file-manager/fm-directory-view.c:1183
 msgid "_Pattern:"
@@ -3441,7 +3441,7 @@ msgstr "_Verteeknis:"
 
 #: ../src/file-manager/fm-directory-view.c:1320
 msgid "Select Folder to Save Search In"
-msgstr "Verteeknis wählen, in de de Sök spiekern werrn schull"
+msgstr "Verteeknis wählen, in de de Sök spiekern werrn schall"
 
 #: ../src/file-manager/fm-directory-view.c:2148
 #: ../src/file-manager/fm-directory-view.c:2185
@@ -3844,7 +3844,7 @@ msgstr "All Elemente in düssem Finster markeren"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:7005
 msgid "Select I_tems Matching..."
-msgstr ""
+msgstr "Elemen_te utwählen, de passen..."
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:7006
@@ -3935,7 +3935,7 @@ msgstr "_Wedderherstellen"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:7047
 msgid "Reset View to _Defaults"
-msgstr ""
+msgstr "Standar_dansicht wedderherstellen"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:7048
@@ -4317,12 +4317,12 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:8132
 #: ../src/nautilus-places-sidebar.c:1439
 msgid "_Lock Drive"
-msgstr ""
+msgstr "_Lööpwark avsluten"
 
 #: ../src/file-manager/fm-directory-view.c:7931
 #: ../src/file-manager/fm-directory-view.c:8133
 msgid "Lock the selected drive"
-msgstr ""
+msgstr "Utwähltes Lööpwark avsluten"
 
 #: ../src/file-manager/fm-directory-view.c:7978
 #: ../src/file-manager/fm-directory-view.c:7982
@@ -4342,7 +4342,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:8103
 #: ../src/nautilus-places-sidebar.c:1438
 msgid "_Unlock Drive"
-msgstr ""
+msgstr "_Lööpwark friegeven"
 
 #: ../src/file-manager/fm-directory-view.c:7994
 msgid "Unlock the drive associated with the open folder"
@@ -4667,12 +4667,12 @@ msgstr ""
 #: ../src/file-manager/fm-icon-view.c:1501
 #: ../src/file-manager/fm-icon-view.c:1671
 msgid "Restore Icons' Original Si_zes"
-msgstr ""
+msgstr "Originale Symbolgröte wedderherstelle_n"
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1502
 msgid "Restore each selected icon to its original size"
-msgstr ""
+msgstr "Originale Symbolgröte vun elkem utwählten Element wedderherstellen"
 
 #. name, stock id
 #. label, accelerator
@@ -4748,7 +4748,7 @@ msgstr "Nah _Embleme"
 
 #: ../src/file-manager/fm-icon-view.c:1672
 msgid "Restore Icon's Original Si_ze"
-msgstr ""
+msgstr "Originale Symbolgröte wedderherstelle_n"
 
 #: ../src/file-manager/fm-icon-view.c:2094
 #, c-format
@@ -4799,40 +4799,40 @@ msgstr "(Leer)"
 msgid "Loading..."
 msgstr "Lade..."
 
-#: ../src/file-manager/fm-list-view.c:2129
+#: ../src/file-manager/fm-list-view.c:2130
 #, c-format
 msgid "%s Visible Columns"
 msgstr ""
 
-#: ../src/file-manager/fm-list-view.c:2148
+#: ../src/file-manager/fm-list-view.c:2149
 msgid "Choose the order of information to appear in this folder:"
 msgstr ""
 
 #. name, stock id
 #. label, accelerator
-#: ../src/file-manager/fm-list-view.c:2202
+#: ../src/file-manager/fm-list-view.c:2203
 msgid "Visible _Columns..."
 msgstr ""
 
 #. tooltip
-#: ../src/file-manager/fm-list-view.c:2203
+#: ../src/file-manager/fm-list-view.c:2204
 msgid "Select the columns visible in this folder"
 msgstr ""
 
 #. translators: this is used in the view menu
-#: ../src/file-manager/fm-list-view.c:2926
+#: ../src/file-manager/fm-list-view.c:2927
 msgid "_List"
 msgstr "_List"
 
-#: ../src/file-manager/fm-list-view.c:2927
+#: ../src/file-manager/fm-list-view.c:2928
 msgid "The list view encountered an error."
 msgstr ""
 
-#: ../src/file-manager/fm-list-view.c:2928
+#: ../src/file-manager/fm-list-view.c:2929
 msgid "The list view encountered an error while starting up."
 msgstr ""
 
-#: ../src/file-manager/fm-list-view.c:2929
+#: ../src/file-manager/fm-list-view.c:2930
 msgid "Display this location with the list view."
 msgstr ""
 
@@ -5139,7 +5139,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-properties-window.c:4831
 msgid "Last changed:"
-msgstr "Toletzt ännert:"
+msgstr "Tolest ännert:"
 
 #: ../src/file-manager/fm-properties-window.c:4845
 msgid "Apply Permissions to Enclosed Files"
@@ -6037,7 +6037,7 @@ msgstr ""
 #: ../src/nautilus-navigation-window-menus.c:822
 #: ../src/nautilus-spatial-window.c:941
 msgid "_Search for Files..."
-msgstr "_För Dateiens döörsöken..."
+msgstr "_Nah Dateien döörsöken..."
 
 #: ../src/nautilus-navigation-window-menus.c:823
 #: ../src/nautilus-spatial-window.c:942
@@ -6666,7 +6666,7 @@ msgstr "Koperschood © 1999-2009 De Nautilus Schrievers"
 #.
 #: ../src/nautilus-window-menus.c:546
 msgid "translator-credits"
-msgstr "Nils-Christoph Fiedler <linux@medienkompanie.de>"
+msgstr "Nils-Christoph Fiedler <fiedler@medienkompanie.de>"
 
 #: ../src/nautilus-window-menus.c:549
 msgid "Nautilus Web Site"
@@ -6728,7 +6728,7 @@ msgstr "_Torüch"
 
 #: ../src/nautilus-window-menus.c:801
 msgid "Undo the last text change"
-msgstr "De letzten Textännern torüggnehmen"
+msgstr "De lesten Textännern torüggnehmen"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:803
@@ -6759,7 +6759,7 @@ msgstr "Dat aktuelle Verteeknis opfrischen"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:818
 msgid "_Contents"
-msgstr "_Inhalte"
+msgstr "_Inholls"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:819
@@ -6828,13 +6828,13 @@ msgstr ""
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:854
 msgid "_Home Folder"
-msgstr "_Heimatverteeknis"
+msgstr "_Hemverteeknis"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:858
 msgid "_Computer"
-msgstr "_Räkner"
+msgstr "_Rekner"
 
 #. name, stock id
 #. label, accelerator
