Updated LowGerman translation

--- a/po/nds.po
+++ b/po/nds.po
@@ -2141,7 +2141,6 @@ msgstr "%S of %S"
 #. * The singular/plural form will be used depending on the remaining time (i.e. the %T argument).
 #.
 #: ../libnautilus-private/nautilus-file-operations.c:2921
-#, fuzzy
 #| msgid "%S of %S &#8212; %T left (%S/sec)"
 #| msgid_plural "%S of %S &#8212; %T left (%S/sec)"
 msgid "%S of %S — %T left (%S/sec)"
@@ -3450,13 +3449,12 @@ msgid "\"%s\" selected"
 msgstr "\"%s\" utwählt"
 
 #: ../src/file-manager/fm-directory-view.c:2150
-#, fuzzy, c-format
 #| msgid "%'d item selected"
 #| msgid_plural "%'d items selected"
 msgid "%'d folder selected"
 msgid_plural "%'d folders selected"
-msgstr[0] "%'d Element utwählt"
-msgstr[1] "%'d Elemente utwählt"
+msgstr[0] "%'d Verteeknis utwählt"
+msgstr[1] "%'d Verteeknisse utwählt"
 
 #: ../src/file-manager/fm-directory-view.c:2160
 #, c-format
