Updating Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-10-06 15:12+0000\n"
-"PO-Revision-Date: 2009-10-09 20:49+0300\n"
+"PO-Revision-Date: 2009-11-29 11:18+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1241,7 +1241,7 @@ msgstr ""
 "liigilise meediumi korral sedasama teha."
 
 msgid "_Always perform this action"
-msgstr "Seda tehakse _alati"
+msgstr "_Tulevikus tehakse seda ilma küsimata"
 
 #. name, stock id
 #. label, accelerator
