Update NEWS for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Major changes in 2.28.2 are:
+* Translation updates
+* Tracker: more robust for failure
+* Fixed "stuck" thumbnailing icon (#598931)
+* Fix crash when renaming file to "" in list view
+* Support absolute filenames as icons in extensions again
+* Update UI correctly when inverting selection
+* Initialize show-hidden-files UI correctly depending
+* Fix free of uninitialized memory
+
 Major changes in 2.28.1 are:
 * Translation updates
 * Correctly position icons for file drops
