--- a/po/ar.po
+++ b/po/ar.po
@@ -7092,7 +7092,7 @@ msgstr ""
 msgid ""
 "Nautilus lets you organize files and folders, both on your computer and "
 "online."
-msgstr "يمكنك لك نوتلس من تنظيم ملفاتك وكجلداتك، على حاسوبك أو عبر الإنترنت."
+msgstr "يمكنك نوتلس من تنظيم ملفاتك ومجلداتك على حاسوبك أو عبر الإنترنت."
 
 #: ../src/nautilus-window-menus.c:531
 msgid "Copyright © 1999-2009 The Nautilus authors"
