Updating Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -19,11 +19,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus HEAD\n"
+"Project-Id-Version: nautilus 2.28\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-08-10 18:19+0000\n"
-"PO-Revision-Date: 2009-09-05 08:25+0300\n"
+"POT-Creation-Date: 2009-09-28 20:11+0000\n"
+"PO-Revision-Date: 2009-12-01 10:43+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1241,7 +1241,7 @@ msgstr ""
 "liigilise meediumi korral sedasama teha."
 
 msgid "_Always perform this action"
-msgstr "Seda tehakse _alati"
+msgstr "_Tulevikus tehakse seda ilma küsimata"
 
 #. name, stock id
 #. label, accelerator
@@ -5594,21 +5594,3 @@ msgstr "Suurendus"
 
 msgid "Set the zoom level of the current view"
 msgstr "Praeguse vaate suurendusastme seadmine"
-
-#~ msgid "Open with \"%s\""
-#~ msgstr "Ava programmiga \"%s\""
-
-#~ msgid "_Open with \"%s\""
-#~ msgstr "_Ava rakendusega \"%s\""
-
-#~ msgid "_Rescan"
-#~ msgstr "_Otsi uuesti"
-
-#~ msgid "_Mount Volume"
-#~ msgstr "_Ühenda kettaseade"
-
-#~ msgid "_Unmount Volume"
-#~ msgstr "_Haagi ketas lahti"
-
-#~ msgid "_Eject Volume"
-#~ msgstr "_Väljasta andmekandja"
